# MeddySDKCLI

./: CMakeLists.txt  CMakePresets.json  MeddySDKCLIConfig.cmake  README.md
CMake/: MeddySDKCLIConfig.cmake
CMake/CMakePresets/: GenericPresets.json
CMake/Modules/CPack/: NSIS.InstallOptions.ini.in
Executable/: CMakeLists.txt
MeddySDKCLI/: .gitignore  CMakeLists.txt  MeddySDKCLI.cpp  MeddySDKCLI.h  MeddySDKCLIConfig.cmake
MeddySDKCLI/CMake/: MeddySDKCLI.cmake
Source/: CMakeLists.txt  Files.cmake
Source/Files/: Main.cpp
Source/Private/: Main.cpp  MeddySDKCLI.cpp
Source/Public/: Main.h
Source/Source/: Main.cpp
Tests/: CMakeLists.txt
Tests/CMake/Scripts/: Project_New_SuccessCase.cmake
